--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@ input, #SliderTrack		{ visibility: hidden; }
    <h2>Таблица Менделеева Chemical Element Loading…</h2>
    <div id="WikiFrameBox"><iframe id="WikiFrame" name="WikiFrame" frameborder="0"><h1>Таблица Менделеева</h1></iframe></div>
   </div> -->
-  <div class="containerq">
+  <div class="container">
     <div class="row">
      <div class="panel-heading"><h2>Ввод данных</h2></div>
         <div class="panel-body">
